Tagでだけpublishしたい

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,5 +37,7 @@ workflows:
           requires:
             - build
           filters:
+            branches:
+              ignore: /.*/
             tags:
-              only: /^v[0-9]+\.[0-9]+\.[0-9]$/
+              only: /^v.*/
