とりあえずそれっぽい予報

--- a/bot/app-secrets.example.yaml
+++ b/bot/app-secrets.example.yaml
@@ -2,3 +2,4 @@ env_variables:
     GOOGLE_STORAGE_BUCKET_NAME: your-gae-porj.appspot.com
     SLACK_VERIFICATION_TOKEN: abcabcabcabcabacabaabcabacab
     SLACK_BOT_USER_OAUTH_ACCESS_TOKEN: xoxb-1234567890-1234567890-abcabcabcabcabcabcabc
+    OPENWEATHERMAP_API_KEY: xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
