とりあえずそれっぽいGoogle検索を実装

--- a/bot/app-secrets.example.yaml
+++ b/bot/app-secrets.example.yaml
@@ -3,3 +3,6 @@ env_variables:
     SLACK_VERIFICATION_TOKEN: abcabcabcabcabacabaabcabacab
     SLACK_BOT_USER_OAUTH_ACCESS_TOKEN: xoxb-1234567890-1234567890-abcabcabcabcabcabcabc
     OPENWEATHERMAP_API_KEY: xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+    GOOGLE_CUSTOMSEARCH_API_KEY: xxxx
+    GOOGLE_CUSTOMSEARCH_ENGINE_ID: xxxx
+
