--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,32 +2,35 @@ name: Go
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, develop ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, develop ]
 
 jobs:
 
-  build:
+  test:
     name: Build
     runs-on: ubuntu-latest
+    env:
+      GO111MODULE: "on"
     steps:
-
     - name: Set up Go 1.14
       uses: actions/setup-go@v1
       with:
         go-version: 1.14
       id: go
-
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
-
     - name: Get dependencies
       run: go get -v -t -d ./...
-
     - name: Build
       run: go build -v .
 
+    # TODO: そもそもテストねーじゃん
     - name: Test
       run: go test -v -cover -race -coverprofile=coverage.txt -covermode=atomic
-    # TODO: そもそもテストねーじゃん
+    - name: Upload coverage
+      uses: codecov/codecov-action@v1
+      with:
+        file: ./coverage
+        verbose: true
