--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,22 +14,21 @@ jobs:
     env:
       GO111MODULE: "on"
     steps:
-    - name: Set up Go 1.18
-      uses: actions/setup-go@v3
-      with:
-        go-version: 1.18
-      id: go
     - name: Check out code into the Go module directory
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
+    - name: Set up Go
+      uses: actions/setup-go@v5
+      with:
+        go-version: 1.22
+      id: go
     - name: Get dependencies
       run: go get -v -t -d ./...
     - name: Build
       run: go build -v .
-
     - name: Test
       run: go test ./... -v -cover -race -coverprofile=coverage.txt -covermode=atomic
     - name: Upload coverage
-      uses: codecov/codecov-action@v1
+      uses: codecov/codecov-action@v4
       with:
         file: ./coverage.txt
         verbose: true
